vlib/v/checker/tests/sum_type_holding_alias_ptr_err.vv
type Alias1 = &int
type Alias2 = &string
type Qwe = Alias1 | Alias2

fn main() {
}
